<resources>
    <string-array name = "lista_nomes_teste">
        <item>João da Silva</item>
        <item>Fulano de Tal</item>
        <item>666 Heavy Metal From God 999</item>
        <item>Tiririca</item>
        <item>Wando</item>
        <item>Belo</item>
        <item>Sin with Sebastian</item>
        <item>Kubanacan</item>
        <item>Renato CCCP</item>
        <item>xadu</item>
    </string-array>

    <string name="app_name">StreetMusic</string>
    <string name="title_activity_cad_cliente">Cadastro de Cliente</string>
    <string name="cadastro">Cadastro</string>
    <string name="login">Login</string>
    <string name="go_back">Voltar</string>
    <string name="e_mail">E-mail</string>
    <string name="nome">Nome</string>
    <string name="sair">Sair</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="por_favor_preencha_os_campos_abaixo">Por favor, preencha os campos abaixo:</string>
    <string name="title_activity_confirma_cadastro">ActivityConfirmaCadastro</string>
    <string name="cadastro_realizado_com_sucesso">Cadastro realizado com sucesso!</string>
    <string name="title_activity_login">ActivityLogin</string>
    <string name="confirma">Confirma</string>
    <string name="title_activity_acitivity_perfil_usuario">AcitivityPerfilUsuario</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="title_activity_editar_perfil">ActivityEditarPerfil</string>
    <string name="name">Name</string>
    <string name="title_activity_confirma_edicao_cad">ActivityConfirmaEdicaoCad</string>
    <string name="cadastro_editado_com_sucesso">Cadastro editado com sucesso!</string>
    <string name="voltar_ao_perfil">Voltar ao perfil</string>
    <string name="title_activity_activiry_confirmacao_musico">ActiviryConfirmacaoMusico</string>
    <string name="parab_ns_agora_voc_um_m_sico">Parabéns! Agora você é um músico!</string>
    <string name="bem_vindo_usu_rio">Bem vindo usuário!</string>
    <string name="conta_financeira">Conta Financeira</string>
    <string name="virar_musico">Virar Musico</string>
    <string name="title_activity_conta_financeira">ActivityContaFinanceira</string>
    <string name="qual_op_o_gostaria_de_cadastrar">Qual opção gostaria de cadastrar?</string>
    <string name="conta_banc_ria">Conta Bancária</string>
    <string name="cart_o_de_cr_dito">Cartão de Crédito</string>
    <string name="title_activity_cartao_credito">ActivityCartaoCredito</string>
    <string name="title_activity_conta_bancaria">ActivityContaBancaria</string>
    <string name="por_favor_insira_as_informa_es_abaixo">Por favor, insira as informações abaixo:</string>
    <string name="n_mero_do_cart_o">Número do Cartão</string>
    <string name="validade">Validade</string>
    <string name="n_mero_de_seguran_a">Número de segurança</string>
    <string name="title_activity_confirma_cartao_credito">ActivityConfirmaCartaoCredito</string>
    <string name="cart_o_cadastrado_com_sucesso">Cartão cadastrado com sucesso!</string>
    <string name="ag_ncia">Agência</string>
    <string name="conta">Conta</string>
    <string name="title_activity_confirma_conta_bancaria">ActivityConfirmaContaBancaria</string>
    <string name="conta_banc_ria_cadastrada_com_sucesso">Conta bancária cadastrada com sucesso!</string>
    <string name="musicos_seguidos">Musicos Seguidos</string>
    <string name="large_text">

        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_musicos_seguidos">ActivityMusicosSeguidos</string>
    <string name="esses_s_o_os_m_sicos_que_voc_segue">Esses são os músicos que você segue:</string>
    <string name="jo_o_da_silva">João da Silva</string>
    <string name="realizar_doa_o">Realizar Doação</string>
    <string name="title_activity_doacao">ActivityDoacao</string>
    <string name="por_favor_insira_o_valor_da_doa_o">Por favor, insira o valor da doação:</string>
    <string name="title_activity_confirma_doacao">ActivityConfirmaDoacao</string>
    <string name="voltar_ao_m_sicos_musicos_seguidos">Voltar ao músicos musicos seguidos</string>
    <string name="doa_o_realizada_com_sucesso">Doação realizada com sucesso!</string>
    <string name="pesquisar_m_sicos">Pesquisar Músicos</string>
    <string name="shows_pr_ximos">Shows próximos</string>
    <string name="title_activity_shows_proximos">ActivityShowsProximos</string>
    <string name="lista_de_shows_pr_ximos_a_voc">Lista de shows próximos a você:</string>
    <string name="green_day_cover_jo_o_da_silva_endere_o_rua_do_limoeiro_789">Green Day Cover - João da Silva, Endereço: Rua do Limoeiro, 789</string>
    <string name="checkin">CheckIn</string>
    <string name="enviar_mensagem">Enviar mensagem</string>
    <string name="title_activity_confirma_check_in">ActivityConfirmaCheckIn</string>
    <string name="voltar_a_tela_de_shows">Voltar a tela de shows</string>
    <string name="check_in_realizado_com_sucesso">Check In realizado com sucesso!</string>
    <string name="title_activity_mensagem">ActivityMensagem</string>
    <string name="confirmar">Confirmar</string>
    <string name="por_favor_insira_sua_mensagem">Por favor, insira sua mensagem:</string>
    <string name="title_activity_confirma_mensagem">ActivityConfirmaMensagem</string>
    <string name="mensagem_enviada_com_sucesso">Mensagem enviada com sucesso!</string>
</resources>
