<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityPerfilUsuario">

    <Button
        android:id="@+id/btEditarPerfil"
        android:layout_width="155dp"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        android:text="@string/editar_perfil"
        app:layout_constraintBottom_toTopOf="@+id/btContaFinanceira"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoBemVindo" />

    <Button
        android:id="@+id/btTornaMusico"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="185dp"
        android:text="@string/virar_musico"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btContaFinanceira" />

    <Button
        android:id="@+id/btContaFinanceira"
        android:layout_width="155dp"
        android:layout_height="0dp"
        android:layout_marginBottom="17dp"
        android:text="@string/conta_financeira"
        app:layout_constraintBottom_toTopOf="@+id/btTornaMusico"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btEditarPerfil" />

    <TextView
        android:id="@+id/textoBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="132dp"
        android:layout_marginBottom="50dp"
        android:text="@string/bem_vindo_usu_rio"
        app:layout_constraintBottom_toTopOf="@+id/btEditarPerfil"
        app:layout_constraintStart_toStartOf="@+id/btEditarPerfil"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>