<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityContaFinanceira">

    <Button
        android:id="@+id/btCartaoDeCredito"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginBottom="11dp"
        android:text="@string/cart_o_de_cr_dito"
        app:layout_constraintBottom_toTopOf="@+id/btContaBancaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textoContaFinanceira" />

    <Button
        android:id="@+id/btContaBancaria"
        android:layout_width="130dp"
        android:layout_height="0dp"
        android:layout_marginBottom="214dp"
        android:text="@string/conta_banc_ria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btCartaoDeCredito" />

    <TextView
        android:id="@+id/textoContaFinanceira"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="181dp"
        android:layout_marginBottom="33dp"
        android:text="@string/qual_op_o_gostaria_de_cadastrar"
        app:layout_constraintBottom_toTopOf="@+id/btCartaoDeCredito"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>