<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityCartaoCredito">

    <TextView
        android:id="@+id/textoInfoCartaoCredito"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="45dp"
        android:text="@string/por_favor_insira_as_informa_es_abaixo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/campoNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="@+id/textoNome"
        app:layout_constraintTop_toBottomOf="@+id/textoNome"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textoNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/nome"
        app:layout_constraintStart_toStartOf="@+id/textoInfoCartaoCredito"
        app:layout_constraintTop_toBottomOf="@+id/textoInfoCartaoCredito" />

    <TextView
        android:id="@+id/textoNumeroCartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:text="@string/n_mero_do_cart_o"
        app:layout_constraintStart_toStartOf="@+id/campoNome"
        app:layout_constraintTop_toBottomOf="@+id/campoNome" />

    <EditText
        android:id="@+id/campoNumeroCartao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textoNumeroCartao"
        app:layout_constraintTop_toBottomOf="@+id/textoNumeroCartao"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textoValidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/validade"
        app:layout_constraintStart_toStartOf="@+id/campoNumeroCartao"
        app:layout_constraintTop_toBottomOf="@+id/campoNumeroCartao" />

    <EditText
        android:id="@+id/campoValidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textoValidade"
        app:layout_constraintTop_toBottomOf="@+id/textoValidade"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textoNumeroSeguranca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/n_mero_de_seguran_a"
        app:layout_constraintStart_toStartOf="@+id/campoValidade"
        app:layout_constraintTop_toBottomOf="@+id/campoValidade" />

    <EditText
        android:id="@+id/camporNumeroSeguranca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@+id/textoNumeroSeguranca"
        app:layout_constraintTop_toBottomOf="@+id/textoNumeroSeguranca"
        android:autofillHints="" />

    <Button
        android:id="@+id/btConfirma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="41dp"
        android:text="Confirmar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camporNumeroSeguranca" />
</android.support.constraint.ConstraintLayout>